bin/iptables.rules
# Generated by iptables-save v1.6.1 on Wed Mar  8 21:00:35 2017
*nat
:PREROUTING ACCEPT [7:534]
:INPUT ACCEPT [6:502]
:OUTPUT ACCEPT [128:8033]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o enp2s0 -j MASQUERADE
COMMIT
# Completed on Wed Mar  8 21:00:35 2017
# Generated by iptables-save v1.6.1 on Wed Mar  8 21:00:35 2017
*mangle
:PREROUTING ACCEPT [49811:7955214]
:INPUT ACCEPT [49810:7955182]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [345249:513405440]
:POSTROUTING ACCEPT [345249:513405440]
COMMIT
# Completed on Wed Mar  8 21:00:35 2017
# Generated by iptables-save v1.6.1 on Wed Mar  8 21:00:35 2017
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3103:205919]
:badflags - [0:0]
:dropwall - [0:0]
:firewall - [0:0]
:silent - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 ! -i lo -j REJECT --reject-with icmp-port-unreachable
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.35.0/24 -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j badflags
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j badflags
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j badflags
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j badflags
-A INPUT -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j badflags
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j badflags
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A INPUT -p icmp -j firewall
-A INPUT -p tcp -m tcp --dport 111 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2049 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 20048 -j ACCEPT
-A INPUT -p udp -m udp --dport 111 -j ACCEPT
-A INPUT -p udp -m udp --dport 2049 -j ACCEPT
-A INPUT -p udp -m udp --dport 20048 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --sport 137 --dport 137 -j silent
-A INPUT -j dropwall
-A INPUT -p tcp -m tcp --dport 21 -m conntrack --ctstate NEW,ESTABLISHED -m comment --comment "Allow ftp connections on port 21" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 20 -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "Allow ftp connections on port 20" -j ACCEPT
-A INPUT -p tcp -m tcp --sport 1024:65535 --dport 1024:65535 -m conntrack --ctstate ESTABLISHED -m comment --comment "Allow passive inbound connections" -j ACCEPT
-A FORWARD -i enp2s0 -m state --state INVALID,NEW -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 21 -m conntrack --ctstate NEW,ESTABLISHED -m comment --comment "Allow ftp connections on port 21" -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 20 -m conntrack --ctstate ESTABLISHED -m comment --comment "Allow ftp connections on port 20" -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 1024:65535 --dport 1024:65535 -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "Allow passive inbound connections" -j ACCEPT
-A badflags -m limit --limit 15/min -j LOG --log-prefix "Badflags:"
-A badflags -j DROP
-A dropwall -m limit --limit 15/min -j LOG --log-prefix "Dropwall:"
-A dropwall -j DROP
-A firewall -m limit --limit 15/min -j LOG --log-prefix "Firewall:"
-A firewall -j DROP
-A silent -j DROP
COMMIT
# Completed on Wed Mar  8 21:00:35 2017
